@@ -7,5 +7,4 @@
  ('install', _ ('Download')),
  ('documentation.html', _ ('Documentation')),
  ('devel', _ ('Development')),
- ('sponsor', _('Sponsoring')),
  ]
