@@ -1,3 +1,9 @@
+2006-09-17  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/menu-entries.py: idem.
+
+	* site/index.html: remove sponsoring section.
+
 2006-09-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* nl/index.html: Remove broken link to canadian mirror.
